applications/administration-server/env/production/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: quizmeup
  name: administration-server-ingress
spec:
  rules:
    - host: administration-server.quizmeup
      http:
        paths:
          - backend:
              service:
                name: administration-server-service
                port:
                  number: 8080
            pathType: ImplementationSpecific
